<resources>
    <string name="app_name">EAMS</string>
    <string name="welcome">Welcome!</string>
    <string name="Login">Login</string>
    <string name="Email">email</string>
    <string name="Password">password</string>
    <string name="submit">Submit!</string>
    <string name="register">Register</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_user_status_dialog">User_status_dialog</string>
</resources>